# gsend

./: .gitignore  LICENSE.txt  README.md  gsend.py  pyproject.toml
